--- a/mediumemotik.html
+++ b/mediumemotik.html
@@ -121,21 +121,19 @@
     // Każdy obiekt ma pola: emoji, pl (główna polska), en (główna angielska), others (tablica dodatkowych poprawnych słów)
     const EMOJI_BANK = {
      easy: [
-  {emoji:'💐', pl:'Bukiet', en:'Bouquet', others:['bouqet', 'flower bunch', 'bukiet']},
-  {emoji:'🥀', pl:'Zwiędła Kwiat', en:'Wilted Flower', others:['wilted flowr', 'dead flower', 'zwiedla kwiat']},
-  {emoji:'🌼', pl:'Stokrotka', en:'Daisy', others:['dazie', 'flower daisy', 'stokrotka']},
-  {emoji:'🍄', pl:'Muchomor', en:'Toadstool', others:['mushroom', 'poison mushroom', 'muchomor']},
-  {emoji:'🌾', pl:'Zboże', en:'Wheat', others:['grain', 'crop wheat', 'zboze']},
-  {emoji:'🌱', pl:'Kiełek', en:'Seedling', others:['seedlng', 'young plant', 'kielek']},
-  {emoji:'☘️', pl:'Koniczynka', en:'Shamrock', others:['shamrok', 'clover', 'koniczynka']},
-  {emoji:'🍀', pl:'Czterolistna Koniczynka', en:'Four-Leaf Clover', others:['four leaf', 'lucky clover', 'czterolistna koniczynka']},
-  {emoji:'🪴', pl:'Roślina Doniczkowa', en:'Potted Plant', others:['pot plant', 'indoor plant', 'paprotki']},
-  {emoji:'🌲', pl:'Choinka', en:'Pine Tree', others:['pine', 'christmas tree', 'choinka']},
-  {emoji:'❄️', pl:'Płatek Śniegu', en:'Snowflake', others:['snow flake', 'ice crystal', 'platek sniegu']},
-  {emoji:'🌡️', pl:'Termometr', en:'Thermometer', others:['thermom', 'temperature gauge', 'termometr']},
-  {emoji:'💧', pl:'Kropla', en:'Droplet', others:['drop', 'water drop', 'kropla']},
-  {emoji:'🌠', pl:'Spadająca Gwiazda', en:'Shooting Star', others:['falling star', 'shooting-star', 'spadajaca gwiazda']},
-  {emoji:'🌌', pl:'Droga Mleczna', en:'Milky Way', others:['milkey way', 'galaxy', 'droga mleczna']}
+  {emoji:'🦝', pl:'Szop', en:'Raccoon', others:['racoon', 'trash panda', 'szop']},
+  {emoji:'🐗', pl:'Dzik', en:'Boar', others:['boarr', 'wild pig', 'dzik']},
+  {emoji:'🦄', pl:'Jednorożec', en:'Unicorn', others:['unicrn', 'magic horse', 'jednorozec']},
+  {emoji:'🦎', pl:'Jaszczurka', en:'Lizard', others:['lizrd', 'gecko', 'jaszczurka']},
+  {emoji:'🐉', pl:'Smok', en:'Dragon', others:['dragn', 'mythical dragon', 'smok']},
+  {emoji:'🦕', pl:'Dinozaur', en:'Dinosaur', others:['dinasaur', 'prehistoric reptile', 'dinozaur']},
+  {emoji:'🐢', pl:'Żółw', en:'Turtle', others:['turtel', 'tortoise', 'zolw']},
+  {emoji:'🐊', pl:'Krokodyl', en:'Crocodile', others:['crocodl', 'croc', 'krokodyl']},
+  {emoji:'🐸', pl:'Żaba', en:'Frog', others:['frogge', 'toad', 'zaba']},
+  {emoji:'🐁', pl:'Mysz', en:'Mouse', others:['mous', 'tiny mouse', 'mysz']},
+  {emoji:'🐀', pl:'Szczur', en:'Rat', others:['ratt', 'big rat', 'szczur']},
+  {emoji:'🐂', pl:'Byk', en:'Bull', others:['bul', 'strong bull', 'byk']},
+  {emoji:'🐃', pl:'Wół Wodny', en:'Water Buffalo', others:['buffalo', 'buffallo', 'wol wodny']}
      ],
      medium:[
   {emoji:'🧎', pl:'Klękanie', en:'Kneeling', others:['kneel', 'kneeling down', 'klenkanie']},
@@ -144,39 +142,14 @@
   {emoji:'👰', pl:'Panna Młoda', en:'Bride', others:['bridde', 'wedding bride', 'panna mloda']},
   {emoji:'🧑‍🦲', pl:'Osoba Łysa', en:'Bald Person', others:['baldy', 'hairless', 'osoba lysa']},
   {emoji:'🧔', pl:'Osoba z Brodą', en:'Bearded Person', others:['beard man', 'bearded', 'osoba z broda']},
-  {emoji:'🌹', pl:'Róża', en:'Rose', others:['roze', 'roses', 'roza']},
-  {emoji:'🌷', pl:'Tulipan', en:'Tulip', others:['tulipn', 'flower tulip', 'tulipan']},
-  {emoji:'🌻', pl:'Słonecznik', en:'Sunflower', others:['sun flowr', 'sun-flower', 'slonecznik']},
-  {emoji:'🍂', pl:'Liście', en:'Leaves', others:['leafs', 'fall leaves', 'liscie']},
-  {emoji:'🍁', pl:'Liść', en:'Leaf', others:['lef', 'single leaf', 'lisc']},
-  {emoji:'🌵', pl:'Kaktus', en:'Cactus', others:['cactos', 'desert cactus', 'kaktus']},
-  {emoji:'🌴', pl:'Palma', en:'Palm Tree', others:['palm', 'tropical tree', 'palma']},
-  {emoji:'🌳', pl:'Drzewo', en:'Tree', others:['tre', 'forest tree', 'drzewo']},
-  {emoji:'🪵', pl:'Drewno', en:'Wood', others:['wooden', 'log', 'drewno']},
-  {emoji:'🪨', pl:'Kamień', en:'Rock', others:['stone', 'boulder', 'kamien']},
-  {emoji:'⛰️', pl:'Góra', en:'Mountain', others:['mountin', 'hill', 'gora']},
-  {emoji:'☃️', pl:'Bałwan', en:'Snowman', others:['snow man', 'snow figure', 'balwan']},
-  {emoji:'🔥', pl:'Ogień', en:'Fire', others:['fier', 'flame', 'ogien']},
-  {emoji:'🌋', pl:'Wulkan', en:'Volcano', others:['volcan', 'erupting mountain', 'wulkan']},
-  {emoji:'🏜️', pl:'Pustynia', en:'Desert', others:['dessert', 'sandy desert', 'pustynia']},
-  {emoji:'🏞️', pl:'Park Narodowy', en:'National Park', others:['natinal park', 'nature park', 'park narodowy']},
-  {emoji:'🏝️', pl:'Wyspa', en:'Island', others:['isand', 'tropical island', 'wyspa']},
-  {emoji:'🏖️', pl:'Plaża', en:'Beach', others:['bech', 'seashore', 'plaza']},
-  {emoji:'🌈', pl:'Tęcza', en:'Rainbow', others:['rain bow', 'colour arc', 'tecza']},
-  {emoji:'🌊', pl:'Fala', en:'Wave', others:['ocean wave', 'sea wave', 'fala']},
-  {emoji:'🌀', pl:'Cyklon', en:'Cyclone', others:['cyclon', 'storm spiral', 'cyklon']},
-  {emoji:'🌪️', pl:'Tornado', en:'Tornado', others:['torando', 'twister', 'tornado']},
-  {emoji:'☔', pl:'Parasol', en:'Umbrella', others:['umbrel', 'rain umbrella', 'parasol']},
-  {emoji:'☁️', pl:'Chmura', en:'Cloud', others:['clud', 'sky cloud', 'chmura']},
-  {emoji:'🌨️', pl:'Śnieg', en:'Snow', others:['sno', 'snowing', 'snieg']},
-  {emoji:'🌧️', pl:'Deszcz', en:'Rain', others:['rein', 'rainfall', 'deszcz']},
-  {emoji:'⛈️', pl:'Burza', en:'Storm', others:['stormm', 'thunderstorm', 'burza']},
-  {emoji:'☀️', pl:'Słońce', en:'Sun', others:['sunshine', 'sun light', 'slonce']},
-  {emoji:'🌙', pl:'Księżyc', en:'Moon', others:['moonlight', 'lunar', 'ksiezyc']},
-  {emoji:'⭐', pl:'Gwiazda', en:'Star', others:['starr', 'bright star', 'gwiazda']},
-  {emoji:'🪐', pl:'Saturn', en:'Saturn', others:['satrun', 'planet saturn', 'saturn']},
-  {emoji:'🌍', pl:'Ziemia', en:'Earth', others:['erth', 'planet earth', 'ziemia']},
-  {emoji:'☄️', pl:'Kometa', en:'Comet', others:['comett', 'space comet', 'kometa']}
+  {emoji:'🤧', pl:'Kichanie', en:'Sneezing', others:['sneeze', 'sneezingface', 'kichanie']},
+  {emoji:'🤸', pl:'Robienie Gwiazdy', en:'Cartwheel', others:['cart wheel', 'gymnastic flip', 'gwiazda']},
+  {emoji:'🥀', pl:'Zwiędła Kwiat', en:'Wilted Flower', others:['wilted flowr', 'dead flower', 'zwiedla kwiat']},
+  {emoji:'🍄', pl:'Muchomor', en:'Toadstool', others:['mushroom', 'poison mushroom', 'muchomor']},
+  {emoji:'🌾', pl:'Zboże', en:'Wheat', others:['grain', 'crop wheat', 'zboze']},
+  {emoji:'🌱', pl:'Kiełek', en:'Seedling', others:['seedlng', 'young plant', 'kielek']},
+  {emoji:'🌡️', pl:'Termometr', en:'Thermometer', others:['thermom', 'temperature gauge', 'termometr']},
+  {emoji:'🐹', pl:'Chomik', en:'Hamster', others:['hamstor', 'cute hamster', 'chomik']}
      ],
      hard:[
   {emoji:'🤡', pl:'Klaun', en:'Clown', others:['clow', 'clownface', 'klaun']},
@@ -258,7 +231,6 @@
   {emoji:'😟', pl:'Smutek', en:'Sadness', others:['sad', 'unhappy', 'smutek']},
   {emoji:'😱', pl:'Strach', en:'Fear', others:['shock', 'scared', 'strach']},
   {emoji:'🤮', pl:'Wymioty', en:'Vomiting', others:['throwup', 'puke', 'wymioty']},
-  {emoji:'🤧', pl:'Kichanie', en:'Sneezing', others:['sneeze', 'sneezingface', 'kichanie']},
   {emoji:'🤒', pl:'Gorączka', en:'Fever', others:['feever', 'ill', 'goraczka']},
   {emoji:'🤥', pl:'Skłamanie', en:'Lying', others:['lie', 'lyingface', 'sklamanie']},
   {emoji:'😇', pl:'Grzeczny', en:'Innocent', others:['angel', 'goodboy', 'grzeczny']},
@@ -287,13 +259,73 @@
   {emoji:'🧑‍🦰', pl:'Rude Włosy', en:'Red Hair', others:['ginger hair', 'orange hair', 'rude wlosy']},
   {emoji:'👱', pl:'Blond Włosy', en:'Blond Hair', others:['blonde', 'yellow hair', 'blond wlosy']},
   {emoji:'🧑‍🦱', pl:'Kręcone Włosy', en:'Curly Hair', others:['curley hair', 'wavy hair', 'krecne wlosy']},
-  {emoji:'🤸', pl:'Robienie Gwiazdy', en:'Cartwheel', others:['cart wheel', 'gymnastic flip', 'gwiazda']},
   {emoji:'🧚', pl:'Wróżka', en:'Fairy', others:['faery', 'pixie', 'wrozka']},
   {emoji:'👸', pl:'Księżniczka', en:'Princess', others:['priness', 'royal lady', 'ksiezniczka']},
   {emoji:'🧑‍🏭', pl:'Robotnik Fabryczny', en:'Factory Worker', others:['plant worker', 'worker factory', 'robotnik']},
   {emoji:'🧑‍⚖️', pl:'Sędzia', en:'Judge', others:['judje', 'court judge', 'sedzia']},
   {emoji:'🧑‍💻', pl:'Programista', en:'Programmer', others:['coder', 'developer', 'programista']},
-  {emoji:'👶', pl:'Niemowlę', en:'Baby', others:['babby', 'infant', 'niemowle']}
+  {emoji:'👶', pl:'Niemowlę', en:'Baby', others:['babby', 'infant', 'niemowle']},
+  {emoji:'🌹', pl:'Róża', en:'Rose', others:['roze', 'roses', 'roza']},
+  {emoji:'🌷', pl:'Tulipan', en:'Tulip', others:['tulipn', 'flower tulip', 'tulipan']},
+  {emoji:'🌻', pl:'Słonecznik', en:'Sunflower', others:['sun flowr', 'sun-flower', 'slonecznik']},
+  {emoji:'🍂', pl:'Liście', en:'Leaves', others:['leafs', 'fall leaves', 'liscie']},
+  {emoji:'🍁', pl:'Liść', en:'Leaf', others:['lef', 'single leaf', 'lisc']},
+  {emoji:'🌵', pl:'Kaktus', en:'Cactus', others:['cactos', 'desert cactus', 'kaktus']},
+  {emoji:'🌴', pl:'Palma', en:'Palm Tree', others:['palm', 'tropical tree', 'palma']},
+  {emoji:'🌳', pl:'Drzewo', en:'Tree', others:['tre', 'forest tree', 'drzewo']},
+  {emoji:'🪵', pl:'Drewno', en:'Wood', others:['wooden', 'log', 'drewno']},
+  {emoji:'🪨', pl:'Kamień', en:'Rock', others:['stone', 'boulder', 'kamien']},
+  {emoji:'⛰️', pl:'Góra', en:'Mountain', others:['mountin', 'hill', 'gora']},
+  {emoji:'☃️', pl:'Bałwan', en:'Snowman', others:['snow man', 'snow figure', 'balwan']},
+  {emoji:'🔥', pl:'Ogień', en:'Fire', others:['fier', 'flame', 'ogien']},
+  {emoji:'🌋', pl:'Wulkan', en:'Volcano', others:['volcan', 'erupting mountain', 'wulkan']},
+  {emoji:'🏜️', pl:'Pustynia', en:'Desert', others:['dessert', 'sandy desert', 'pustynia']},
+  {emoji:'🏞️', pl:'Park Narodowy', en:'National Park', others:['natinal park', 'nature park', 'park narodowy']},
+  {emoji:'🏝️', pl:'Wyspa', en:'Island', others:['isand', 'tropical island', 'wyspa']},
+  {emoji:'🏖️', pl:'Plaża', en:'Beach', others:['bech', 'seashore', 'plaza']},
+  {emoji:'🌈', pl:'Tęcza', en:'Rainbow', others:['rain bow', 'colour arc', 'tecza']},
+  {emoji:'🌊', pl:'Fala', en:'Wave', others:['ocean wave', 'sea wave', 'fala']},
+  {emoji:'🌀', pl:'Cyklon', en:'Cyclone', others:['cyclon', 'storm spiral', 'cyklon']},
+  {emoji:'🌪️', pl:'Tornado', en:'Tornado', others:['torando', 'twister', 'tornado']},
+  {emoji:'☔', pl:'Parasol', en:'Umbrella', others:['umbrel', 'rain umbrella', 'parasol']},
+  {emoji:'☁️', pl:'Chmura', en:'Cloud', others:['clud', 'sky cloud', 'chmura']},
+  {emoji:'🌨️', pl:'Śnieg', en:'Snow', others:['sno', 'snowing', 'snieg']},
+  {emoji:'🌧️', pl:'Deszcz', en:'Rain', others:['rein', 'rainfall', 'deszcz']},
+  {emoji:'⛈️', pl:'Burza', en:'Storm', others:['stormm', 'thunderstorm', 'burza']},
+  {emoji:'☀️', pl:'Słońce', en:'Sun', others:['sunshine', 'sun light', 'slonce']},
+  {emoji:'🌙', pl:'Księżyc', en:'Moon', others:['moonlight', 'lunar', 'ksiezyc']},
+  {emoji:'⭐', pl:'Gwiazda', en:'Star', others:['starr', 'bright star', 'gwiazda']},
+  {emoji:'🪐', pl:'Saturn', en:'Saturn', others:['satrun', 'planet saturn', 'saturn']},
+  {emoji:'🌍', pl:'Ziemia', en:'Earth', others:['erth', 'planet earth', 'ziemia']},
+  {emoji:'☄️', pl:'Kometa', en:'Comet', others:['comett', 'space comet', 'kometa']},
+  {emoji:'💐', pl:'Bukiet', en:'Bouquet', others:['bouqet', 'flower bunch', 'bukiet']},
+  {emoji:'🌼', pl:'Stokrotka', en:'Daisy', others:['dazie', 'flower daisy', 'stokrotka']},
+  {emoji:'☘️', pl:'Koniczynka', en:'Shamrock', others:['shamrok', 'clover', 'koniczynka']},
+  {emoji:'🍀', pl:'Czterolistna Koniczynka', en:'Four-Leaf Clover', others:['four leaf', 'lucky clover', 'czterolistna koniczynka']},
+  {emoji:'🪴', pl:'Roślina Doniczkowa', en:'Potted Plant', others:['pot plant', 'indoor plant', 'paprotki']},
+  {emoji:'🌲', pl:'Choinka', en:'Pine Tree', others:['pine', 'christmas tree', 'choinka']},
+  {emoji:'❄️', pl:'Płatek Śniegu', en:'Snowflake', others:['snow flake', 'ice crystal', 'platek sniegu']},
+  {emoji:'💧', pl:'Kropla', en:'Droplet', others:['drop', 'water drop', 'kropla']},
+  {emoji:'🌠', pl:'Spadająca Gwiazda', en:'Shooting Star', others:['falling star', 'shooting-star', 'spadajaca gwiazda']},
+  {emoji:'🌌', pl:'Droga Mleczna', en:'Milky Way', others:['milkey way', 'galaxy', 'droga mleczna']},
+  {emoji:'🐵', pl:'Małpa', en:'Monkey', others:['monky', 'ape', 'malpa']},
+  {emoji:'🦁', pl:'Lew', en:'Lion', others:['lioon', 'king of jungle', 'lew']},
+  {emoji:'🐯', pl:'Tygrys', en:'Tiger', others:['tiger', 'tigerr', 'tygrys']},
+  {emoji:'🐱', pl:'Kot', en:'Cat', others:['kat', 'kitty', 'kot']},
+  {emoji:'🐶', pl:'Pies', en:'Dog', others:['dogg', 'puppy', 'pies']},
+  {emoji:'🐺', pl:'Wilk', en:'Wolf', others:['wolff', 'wild wolf', 'wilk']},
+  {emoji:'🐻', pl:'Niedźwiedź', en:'Bear', others:['ber', 'grizzly', 'niedziedz']},
+  {emoji:'🐻‍❄️', pl:'Niedźwiedź Polarny', en:'Polar Bear', others:['polarbeer', 'white bear', 'niedziedz polarny']},
+  {emoji:'🐨', pl:'Koala', en:'Koala', others:['koalaa', 'koala bear', 'koala']},
+  {emoji:'🐼', pl:'Panda', en:'Panda', others:['padaa', 'giant panda', 'panda']},
+  {emoji:'🐰', pl:'Królik', en:'Rabbit', others:['rabitt', 'bunny', 'krolik']},
+  {emoji:'🦊', pl:'Lis', en:'Fox', others:['foxx', 'wild fox', 'lis']},
+  {emoji:'🐮', pl:'Krowa', en:'Cow', others:['coww', 'dairy cow', 'krowa']},
+  {emoji:'🐷', pl:'Świnia', en:'Pig', others:['pigg', 'hog', 'swinia']},
+  {emoji:'🦓', pl:'Zebra', en:'Zebra', others:['zebbra', 'striped horse', 'zebra']},
+  {emoji:'🐴', pl:'Koń', en:'Horse', others:['hors', 'stallion', 'kon']},
+  {emoji:'🦖', pl:'Tirex', en:'T-Rex', others:['trex', 'tyrannosaurus', 'tirex']},
+  {emoji:'🐍', pl:'Wąż', en:'Snake', others:['snak', 'serpent', 'waz']}
      ]
     };
 
