--- a/mediumemotik.html
+++ b/mediumemotik.html
@@ -121,19 +121,40 @@
     // Każdy obiekt ma pola: emoji, pl (główna polska), en (główna angielska), others (tablica dodatkowych poprawnych słów)
     const EMOJI_BANK = {
      easy: [
-  {emoji:'🦝', pl:'Szop', en:'Raccoon', others:['racoon', 'trash panda', 'szop']},
-  {emoji:'🐗', pl:'Dzik', en:'Boar', others:['boarr', 'wild pig', 'dzik']},
-  {emoji:'🦄', pl:'Jednorożec', en:'Unicorn', others:['unicrn', 'magic horse', 'jednorozec']},
-  {emoji:'🦎', pl:'Jaszczurka', en:'Lizard', others:['lizrd', 'gecko', 'jaszczurka']},
-  {emoji:'🐉', pl:'Smok', en:'Dragon', others:['dragn', 'mythical dragon', 'smok']},
-  {emoji:'🦕', pl:'Dinozaur', en:'Dinosaur', others:['dinasaur', 'prehistoric reptile', 'dinozaur']},
-  {emoji:'🐢', pl:'Żółw', en:'Turtle', others:['turtel', 'tortoise', 'zolw']},
-  {emoji:'🐊', pl:'Krokodyl', en:'Crocodile', others:['crocodl', 'croc', 'krokodyl']},
-  {emoji:'🐸', pl:'Żaba', en:'Frog', others:['frogge', 'toad', 'zaba']},
-  {emoji:'🐁', pl:'Mysz', en:'Mouse', others:['mous', 'tiny mouse', 'mysz']},
-  {emoji:'🐀', pl:'Szczur', en:'Rat', others:['ratt', 'big rat', 'szczur']},
-  {emoji:'🐂', pl:'Byk', en:'Bull', others:['bul', 'strong bull', 'byk']},
-  {emoji:'🐃', pl:'Wół Wodny', en:'Water Buffalo', others:['buffalo', 'buffallo', 'wol wodny']}
+  {emoji:'🐏', pl:'Baran', en:'Ram', others:['ramm', 'male sheep', 'baran']},
+  {emoji:'🐑', pl:'Owca', en:'Sheep', others:['shep', 'lamb', 'owca']},
+  {emoji:'🐐', pl:'Koza', en:'Goat', others:['goaat', 'mountain goat', 'koza']},
+  {emoji:'🦌', pl:'Jeleń', en:'Deer', others:['dear', 'stag', 'jelen']},
+  {emoji:'🦙', pl:'Lama', en:'Llama', others:['llama', 'lamaa', 'lama']},
+  {emoji:'🦥', pl:'Leniwiec', en:'Sloth', others:['slothh', 'lazy animal', 'leniwiec']},
+  {emoji:'🦘', pl:'Kangur', en:'Kangaroo', others:['kangarro', 'roo', 'kangur']},
+  {emoji:'🐘', pl:'Słoń', en:'Elephant', others:['elefant', 'big elephant', 'slon']},
+  {emoji:'🦣', pl:'Mamut', en:'Mammoth', others:['mamoth', 'woolly mammoth', 'mamut']},
+  {emoji:'🦏', pl:'Nosorożec', en:'Rhinoceros', others:['rhino', 'rhinno', 'nosorozec']},
+  {emoji:'🦛', pl:'Hipopotam', en:'Hippopotamus', others:['hipo', 'hippopotam', 'hipopotam']},
+  {emoji:'🦒', pl:'Żyrafa', en:'Giraffe', others:['girafe', 'giraff', 'zyrafa']},
+  {emoji:'🐆', pl:'Gepard', en:'Cheetah', others:['cheetahh', 'fast cheetah', 'gepard']},
+  {emoji:'🐅', pl:'Tygrys', en:'Tiger', others:['tigar', 'big cat', 'tygrys']},
+  {emoji:'🦍', pl:'Goryl', en:'Gorilla', others:['gorila', 'big gorilla', 'goryl']},
+  {emoji:'🦧', pl:'Orangutan', en:'Orangutan', others:['orangutang', 'orange ape', 'orangutan']},
+  {emoji:'🐪', pl:'Wielbłąd', en:'Camel', others:['camell', 'desert camel', 'wielblad']},
+  {emoji:'🐿️', pl:'Wiewiórka', en:'Squirrel', others:['squirel', 'tree squirrel', 'wiewiorka']},
+  {emoji:'🦫', pl:'Bóbr', en:'Beaver', others:['beavr', 'water beaver', 'bobr']},
+  {emoji:'🦨', pl:'Skunks', en:'Skunk', others:['skunck', 'striped skunk', 'skunks']},
+  {emoji:'🦡', pl:'Borsuk', en:'Badger', others:['badjer', 'wild badger', 'borsuk']},
+  {emoji:'🦔', pl:'Jeż', en:'Hedgehog', others:['hedghog', 'spiky hedgehog', 'jez']},
+  {emoji:'🦦', pl:'Wydra', en:'Otter', others:['ottr', 'river otter', 'wydra']},
+  {emoji:'🦇', pl:'Nietoperz', en:'Bat', others:['batt', 'flying bat', 'nietoperz']},
+  {emoji:'🪶', pl:'Pióro', en:'Feather', others:['feathr', 'bird feather', 'pioro']},
+  {emoji:'🐦', pl:'Ptak', en:'Bird', others:['birdy', 'wild bird', 'ptak']},
+  {emoji:'🐓', pl:'Kogut', en:'Rooster', others:['roostr', 'cock', 'kogut']},
+  {emoji:'🐔', pl:'Kura', en:'Hen', others:['henn', 'chicken', 'kura']},
+  {emoji:'🐣', pl:'Pisklę', en:'Chick', others:['chik', 'baby chicken', 'piskle']},
+  {emoji:'🦅', pl:'Orzeł', en:'Eagle', others:['eagel', 'bald eagle', 'orzel']},
+  {emoji:'🦉', pl:'Sowa', en:'Owl', others:['owll', 'night owl', 'sowa']},
+  {emoji:'🦜', pl:'Papuga', en:'Parrot', others:['parot', 'talking parrot', 'papuga']},
+  {emoji:'🕊️', pl:'Gołąb', en:'Dove', others:['dov', 'pigeon', 'golab']},
+  {emoji:'🦢', pl:'Łabędź', en:'Swan', others:['swaan', 'white swan', 'labedz']}
      ],
      medium:[
   {emoji:'🧎', pl:'Klękanie', en:'Kneeling', others:['kneel', 'kneeling down', 'klenkanie']},
@@ -149,7 +170,20 @@
   {emoji:'🌾', pl:'Zboże', en:'Wheat', others:['grain', 'crop wheat', 'zboze']},
   {emoji:'🌱', pl:'Kiełek', en:'Seedling', others:['seedlng', 'young plant', 'kielek']},
   {emoji:'🌡️', pl:'Termometr', en:'Thermometer', others:['thermom', 'temperature gauge', 'termometr']},
-  {emoji:'🐹', pl:'Chomik', en:'Hamster', others:['hamstor', 'cute hamster', 'chomik']}
+  {emoji:'🐹', pl:'Chomik', en:'Hamster', others:['hamstor', 'cute hamster', 'chomik']},
+  {emoji:'🦝', pl:'Szop', en:'Raccoon', others:['racoon', 'trash panda', 'szop']},
+  {emoji:'🐗', pl:'Dzik', en:'Boar', others:['boarr', 'wild pig', 'dzik']},
+  {emoji:'🦄', pl:'Jednorożec', en:'Unicorn', others:['unicrn', 'magic horse', 'jednorozec']},
+  {emoji:'🦎', pl:'Jaszczurka', en:'Lizard', others:['lizrd', 'gecko', 'jaszczurka']},
+  {emoji:'🐉', pl:'Smok', en:'Dragon', others:['dragn', 'mythical dragon', 'smok']},
+  {emoji:'🦕', pl:'Dinozaur', en:'Dinosaur', others:['dinasaur', 'prehistoric reptile', 'dinozaur']},
+  {emoji:'🐢', pl:'Żółw', en:'Turtle', others:['turtel', 'tortoise', 'zolw']},
+  {emoji:'🐊', pl:'Krokodyl', en:'Crocodile', others:['crocodl', 'croc', 'krokodyl']},
+  {emoji:'🐸', pl:'Żaba', en:'Frog', others:['frogge', 'toad', 'zaba']},
+  {emoji:'🐁', pl:'Mysz', en:'Mouse', others:['mous', 'tiny mouse', 'mysz']},
+  {emoji:'🐀', pl:'Szczur', en:'Rat', others:['ratt', 'big rat', 'szczur']},
+  {emoji:'🐂', pl:'Byk', en:'Bull', others:['bul', 'strong bull', 'byk']},
+  {emoji:'🐃', pl:'Wół Wodny', en:'Water Buffalo', others:['buffalo', 'buffallo', 'wol wodny']}
      ],
      hard:[
   {emoji:'🤡', pl:'Klaun', en:'Clown', others:['clow', 'clownface', 'klaun']},
