--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,10 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="20250826_losoweturnieje.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756209355/losoweturnieje_wtkjnf.png" alt="Turnieje">
+                <span>Turnieje</span>
+            </a>
             <a href="20250825_ksiazeczki.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750272784/odznaka_wmnulc.jpg" alt="Odznaki">
                 <span>Odznaki</span>
@@ -23,10 +27,6 @@
             <a href="20250823_sierpien.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756053414/sierpien_vzugrt.png" alt="Sierpień">
                 <span>Sierpień</span>
-            </a>
-            <a href="mediumemotik.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755866451/emotki_lb8pvb.png" alt="Emotki">
-                <span>Emotki</span>
             </a>
             <a href="20250821_frekwencja.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755772507/dziennik_xpixpf.png" alt="Dziennik">
@@ -44,10 +44,6 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755159386/emotkizwierzeta_xlp30a.png" alt="Zwierzęta">
                 <span>Zwierzęta</span>
             </a>
-            <a href="julka.html" class="app-icon">
-                <img src="20250813_julka.png" alt="Julka">
-                <span>Julka</span>
-            </a>
             <a href="20250813_piesek.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755108163/piesek_r1ucwg.png" alt="Piesek">
                 <span>Piesek</span>
@@ -59,14 +55,6 @@
             <a href="20250813_poop.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755108019/poop.html_rgehum.png" alt="Poop">
                 <span>Poop</span>
-            </a>
-            <a href="gry.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251558/gry_nxmlim.jpg" alt="Gry">
-                <span>Gry</span>
-            </a>
-            <a href="aplikacje.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251811/aplikacje2_uuvpgl.png" alt="Aplikacje">
-                <span>Aplikacje</span>
             </a>
             <a href="20250813_rekordyziemi.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750958807/rekordyziemi_cjdi5w.png" alt="Rekordy Ziemi">
@@ -183,6 +171,22 @@
             <a href="20250617_kostka.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750327371/kostkadogry_xgh4is.png" alt="Kostka">
                 <span>Kostka</span>
+            </a>
+            <a href="gry.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251558/gry_nxmlim.jpg" alt="Gry">
+                <span>Gry</span>
+            </a>
+            <a href="aplikacje.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251811/aplikacje2_uuvpgl.png" alt="Aplikacje">
+                <span>Aplikacje</span>
+            </a>
+            <a href="julka.html" class="app-icon">
+                <img src="20250813_julka.png" alt="Julka">
+                <span>Julka</span>
+            </a>
+            <a href="mediumemotik.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755866451/emotki_lb8pvb.png" alt="Emotki">
+                <span>Emotki</span>
             </a>
         </div>
     </div>
