--- a/20250826_losoweturnieje.html
+++ b/20250826_losoweturnieje.html
@@ -130,7 +130,7 @@ const ALL_TEAMS = [
 "Cremonese","Egnatia","Inter Escaldes","Ipswich","Millwall","Watford","Charlton","QPR","Austria Wiedeń","Borac Banja Luka","Hajduk Split",
 "Buducnost","Jablonec","Al Ahly","Panetolikos","Vaduz","Rabotnicki","Hertha Berlin","Dresden","1. FC Nurnberg","Molde","Stal Mielec",
 "Śląsk Wrocław","Puszcza Niepołomice","Wisła Płock","Bruk-Bet T.","Arka Gdynia","Wisła Kraków","Miedź Legnica","Polonia Warszawa","GKS Tychy",
-"Górnik Łęczna","Ruch Chorów","ŁKS Łódź","Nacional","Partizan","Zilina","Lugano","Mjallby","Esperance Tunis","Alanyaspor","Stevenage",
+"Górnik Łęczna","Ruch Chorzów","ŁKS Łódź","Nacional","Partizan","Zilina","Lugano","Mjallby","Esperance Tunis","Alanyaspor","Stevenage",
 "Mansfield","Wimbledon","Luton","Leyton Orient","Cambridge Utd","Znicz Pruszków","Stal Rzeszów","Chrobry Głogów","Odra Opole","Pogoń Siedlce",
 "KKS Kalisz","Warta Poznań","Stal Stalowa Wola","Polonia Bytom","Pogoń Grodzisk Mazowiecki","KS Wieczysta Kraków","Błyskawica","Sokół Chwaliszew",
 "Astra Krotoszyn"
