--- a/mediumemotik.html
+++ b/mediumemotik.html
@@ -121,6 +121,71 @@
     // Każdy obiekt ma pola: emoji, pl (główna polska), en (główna angielska), others (tablica dodatkowych poprawnych słów)
     const EMOJI_BANK = {
      easy: [
+  {emoji:'🦚', pl:'Paw', en:'Peacock', others:['peacok', 'colorful peacock', 'paw']},
+  {emoji:'🦐', pl:'Krewetka', en:'Shrimp', others:['shrip', 'prawn', 'krewetka']},
+  {emoji:'🦞', pl:'Homar', en:'Lobster', others:['lobstr', 'big lobster', 'homar']},
+  {emoji:'🐙', pl:'Ośmiornica', en:'Octopus', others:['octopuss', 'giant octopus', 'osmiornica']},
+  {emoji:'🦪', pl:'Małża', en:'Oyster', others:['oysterr', 'clam', 'malza']},
+  {emoji:'🪲', pl:'Chrząszcz', en:'Beetle', others:['beetl', 'scarab beetle', 'chrzaszcz']},
+  {emoji:'🦟', pl:'Komar', en:'Mosquito', others:['moskito', 'mosqueto', 'komar']},
+  {emoji:'🪳', pl:'Karaluch', en:'Cockroach', others:['cokroach', 'roach', 'karaluch']},
+  {emoji:'🪱', pl:'Dżdżownica', en:'Earthworm', others:['earth worm', 'worm', 'dzdzownica']}
+     ],
+     medium:[
+  {emoji:'🦬', pl:'Żubr', en:'Bison', others:['bisonn', 'wild bison', 'zubr']},
+  {emoji:'🦭', pl:'Foka', en:'Seal', others:['seel', 'sea seal', 'foka']},
+  {emoji:'🐚', pl:'Muszla', en:'Seashell', others:['sea shell', 'shell', 'muszla']},
+  {emoji:'🦋', pl:'Motyl', en:'Butterfly', others:['buterfly', 'colorful butterfly', 'motyl']},
+  {emoji:'🐛', pl:'Robak', en:'Bug', others:['bugg', 'worm bug', 'robak']},
+  {emoji:'🪰', pl:'Mucha', en:'Fly', others:['fliy', 'housefly', 'mucha']},
+  {emoji:'🐞', pl:'Biedronka', en:'Ladybug', others:['lady bug', 'ladybird', 'biedronka']},
+  {emoji:'🐜', pl:'Mrówka', en:'Ant', others:['antt', 'worker ant', 'mrowka']},
+  {emoji:'🦗', pl:'Pasikonik', en:'Cricket', others:['crickett', 'grasshopper', 'pasikonik']},
+  {emoji:'🐌', pl:'Ślimak', en:'Snail', others:['snall', 'garden snail', 'slimak']},
+  {emoji:'🕸️', pl:'Pajęczyna', en:'Spider Web', others:['spiderwebb', 'web', 'pajeczyna']},
+  {emoji:'🦑', pl:'Kałamarnica', en:'Squid', others:['squidd', 'sea squid', 'kalamarnica']},
+  {emoji:'🐬', pl:'Delfin', en:'Dolphin', others:['dolfin', 'sea dolphin', 'delfin']},
+  {emoji:'🐋', pl:'Wieloryb', en:'Whale', others:['whal', 'big whale', 'wieloryb']},
+  {emoji:'🦃', pl:'Indyk', en:'Turkey', others:['turky', 'wild turkey', 'indyk']},
+  {emoji:'🐧', pl:'Pingwin', en:'Penguin', others:['penguine', 'cute penguin', 'pingwin']},
+  {emoji:'🦩', pl:'Flaming', en:'Flamingo', others:['flamngo', 'pink flamingo', 'flaming']},
+  {emoji:'🐝', pl:'Pszczoła', en:'Bee', others:['bee', 'honeybee', 'pszczola']},
+  {emoji:'🦂', pl:'Skorpion', en:'Scorpion', others:['scorpian', 'desert scorpion', 'skorpion']},
+  {emoji:'🧔', pl:'Osoba z Brodą', en:'Bearded Person', others:['beard man', 'bearded', 'osoba z broda']},
+  {emoji:'🤧', pl:'Kichanie', en:'Sneezing', others:['sneeze', 'sneezingface', 'kichanie']},
+  {emoji:'🤸', pl:'Robienie Gwiazdy', en:'Cartwheel', others:['cart wheel', 'gymnastic flip', 'gwiazda']},
+  {emoji:'🥀', pl:'Zwiędła Kwiat', en:'Wilted Flower', others:['wilted flowr', 'dead flower', 'zwiedla kwiat']},
+  {emoji:'🍄', pl:'Muchomor', en:'Toadstool', others:['mushroom', 'poison mushroom', 'muchomor']},
+  {emoji:'🌡️', pl:'Termometr', en:'Thermometer', others:['thermom', 'temperature gauge', 'termometr']},
+  {emoji:'🦝', pl:'Szop', en:'Raccoon', others:['racoon', 'trash panda', 'szop']},
+  {emoji:'🐗', pl:'Dzik', en:'Boar', others:['boarr', 'wild pig', 'dzik']},
+  {emoji:'🐃', pl:'Wół Wodny', en:'Water Buffalo', others:['buffalo', 'buffallo', 'wol wodny']},
+  {emoji:'🦏', pl:'Nosorożec', en:'Rhinoceros', others:['rhino', 'rhinno', 'nosorozec']},
+  {emoji:'🦛', pl:'Hipopotam', en:'Hippopotamus', others:['hipo', 'hippopotam', 'hipopotam']},
+  {emoji:'🦒', pl:'Żyrafa', en:'Giraffe', others:['girafe', 'giraff', 'zyrafa']},
+  {emoji:'🐿️', pl:'Wiewiórka', en:'Squirrel', others:['squirel', 'tree squirrel', 'wiewiorka']},
+  {emoji:'🦫', pl:'Bóbr', en:'Beaver', others:['beavr', 'water beaver', 'bobr']},
+  {emoji:'🦡', pl:'Borsuk', en:'Badger', others:['badjer', 'wild badger', 'borsuk']},
+  {emoji:'🦔', pl:'Jeż', en:'Hedgehog', others:['hedghog', 'spiky hedgehog', 'jez']},
+  {emoji:'🦦', pl:'Wydra', en:'Otter', others:['ottr', 'river otter', 'wydra']},
+  {emoji:'🐓', pl:'Kogut', en:'Rooster', others:['roostr', 'cock', 'kogut']},
+  {emoji:'🕊️', pl:'Gołąb', en:'Dove', others:['dov', 'pigeon', 'golab']},
+  {emoji:'🦢', pl:'Łabędź', en:'Swan', others:['swaan', 'white swan', 'labedz']}
+     ],
+     hard:[
+  {emoji:'🕷️', pl:'Pająk', en:'Spider', others:['spidr', 'black spider', 'pajak']},
+  {emoji:'🌾', pl:'Zboże', en:'Wheat', others:['grain', 'crop wheat', 'zboze']},
+  {emoji:'🧎', pl:'Klękanie', en:'Kneeling', others:['kneel', 'kneeling down', 'klenkanie']},
+  {emoji:'🌱', pl:'Kiełek', en:'Seedling', others:['seedlng', 'young plant', 'kielek']},
+  {emoji:'🦆', pl:'Kaczka', en:'Duck', others:['ducck', 'wild duck', 'kaczka']},
+  {emoji:'🦈', pl:'Rekin', en:'Shark', others:['shrk', 'great white shark', 'rekin']},
+  {emoji:'🐟', pl:'Ryba', en:'Fish', others:['fisch', 'river fish', 'ryba']},
+  {emoji:'🦀', pl:'Krab', en:'Crab', others:['crabb', 'sea crab', 'krab']},
+  {emoji:'🐆', pl:'Gepard', en:'Cheetah', others:['cheetahh', 'fast cheetah', 'gepard']},
+  {emoji:'🐅', pl:'Tygrys', en:'Tiger', others:['tigar', 'big cat', 'tygrys']},
+  {emoji:'🦍', pl:'Goryl', en:'Gorilla', others:['gorila', 'big gorilla', 'goryl']},
+  {emoji:'🦧', pl:'Orangutan', en:'Orangutan', others:['orangutang', 'orange ape', 'orangutan']},
+  {emoji:'🐪', pl:'Wielbłąd', en:'Camel', others:['camell', 'desert camel', 'wielblad']},
   {emoji:'🐏', pl:'Baran', en:'Ram', others:['ramm', 'male sheep', 'baran']},
   {emoji:'🐑', pl:'Owca', en:'Sheep', others:['shep', 'lamb', 'owca']},
   {emoji:'🐐', pl:'Koza', en:'Goat', others:['goaat', 'mountain goat', 'koza']},
@@ -130,62 +195,15 @@
   {emoji:'🦘', pl:'Kangur', en:'Kangaroo', others:['kangarro', 'roo', 'kangur']},
   {emoji:'🐘', pl:'Słoń', en:'Elephant', others:['elefant', 'big elephant', 'slon']},
   {emoji:'🦣', pl:'Mamut', en:'Mammoth', others:['mamoth', 'woolly mammoth', 'mamut']},
-  {emoji:'🦏', pl:'Nosorożec', en:'Rhinoceros', others:['rhino', 'rhinno', 'nosorozec']},
-  {emoji:'🦛', pl:'Hipopotam', en:'Hippopotamus', others:['hipo', 'hippopotam', 'hipopotam']},
-  {emoji:'🦒', pl:'Żyrafa', en:'Giraffe', others:['girafe', 'giraff', 'zyrafa']},
-  {emoji:'🐆', pl:'Gepard', en:'Cheetah', others:['cheetahh', 'fast cheetah', 'gepard']},
-  {emoji:'🐅', pl:'Tygrys', en:'Tiger', others:['tigar', 'big cat', 'tygrys']},
-  {emoji:'🦍', pl:'Goryl', en:'Gorilla', others:['gorila', 'big gorilla', 'goryl']},
-  {emoji:'🦧', pl:'Orangutan', en:'Orangutan', others:['orangutang', 'orange ape', 'orangutan']},
-  {emoji:'🐪', pl:'Wielbłąd', en:'Camel', others:['camell', 'desert camel', 'wielblad']},
-  {emoji:'🐿️', pl:'Wiewiórka', en:'Squirrel', others:['squirel', 'tree squirrel', 'wiewiorka']},
-  {emoji:'🦫', pl:'Bóbr', en:'Beaver', others:['beavr', 'water beaver', 'bobr']},
   {emoji:'🦨', pl:'Skunks', en:'Skunk', others:['skunck', 'striped skunk', 'skunks']},
-  {emoji:'🦡', pl:'Borsuk', en:'Badger', others:['badjer', 'wild badger', 'borsuk']},
-  {emoji:'🦔', pl:'Jeż', en:'Hedgehog', others:['hedghog', 'spiky hedgehog', 'jez']},
-  {emoji:'🦦', pl:'Wydra', en:'Otter', others:['ottr', 'river otter', 'wydra']},
   {emoji:'🦇', pl:'Nietoperz', en:'Bat', others:['batt', 'flying bat', 'nietoperz']},
   {emoji:'🪶', pl:'Pióro', en:'Feather', others:['feathr', 'bird feather', 'pioro']},
   {emoji:'🐦', pl:'Ptak', en:'Bird', others:['birdy', 'wild bird', 'ptak']},
-  {emoji:'🐓', pl:'Kogut', en:'Rooster', others:['roostr', 'cock', 'kogut']},
   {emoji:'🐔', pl:'Kura', en:'Hen', others:['henn', 'chicken', 'kura']},
   {emoji:'🐣', pl:'Pisklę', en:'Chick', others:['chik', 'baby chicken', 'piskle']},
   {emoji:'🦅', pl:'Orzeł', en:'Eagle', others:['eagel', 'bald eagle', 'orzel']},
   {emoji:'🦉', pl:'Sowa', en:'Owl', others:['owll', 'night owl', 'sowa']},
   {emoji:'🦜', pl:'Papuga', en:'Parrot', others:['parot', 'talking parrot', 'papuga']},
-  {emoji:'🕊️', pl:'Gołąb', en:'Dove', others:['dov', 'pigeon', 'golab']},
-  {emoji:'🦢', pl:'Łabędź', en:'Swan', others:['swaan', 'white swan', 'labedz']}
-     ],
-     medium:[
-  {emoji:'🧎', pl:'Klękanie', en:'Kneeling', others:['kneel', 'kneeling down', 'klenkanie']},
-  {emoji:'🧑‍🦯', pl:'Osoba Niewidoma', en:'Blind Person', others:['visually impaired', 'blind man', 'niewidoma']},
-  {emoji:'🤵', pl:'Pan Młody', en:'Groom', others:['groomm', 'bridegroom', 'pan mlody']},
-  {emoji:'👰', pl:'Panna Młoda', en:'Bride', others:['bridde', 'wedding bride', 'panna mloda']},
-  {emoji:'🧑‍🦲', pl:'Osoba Łysa', en:'Bald Person', others:['baldy', 'hairless', 'osoba lysa']},
-  {emoji:'🧔', pl:'Osoba z Brodą', en:'Bearded Person', others:['beard man', 'bearded', 'osoba z broda']},
-  {emoji:'🤧', pl:'Kichanie', en:'Sneezing', others:['sneeze', 'sneezingface', 'kichanie']},
-  {emoji:'🤸', pl:'Robienie Gwiazdy', en:'Cartwheel', others:['cart wheel', 'gymnastic flip', 'gwiazda']},
-  {emoji:'🥀', pl:'Zwiędła Kwiat', en:'Wilted Flower', others:['wilted flowr', 'dead flower', 'zwiedla kwiat']},
-  {emoji:'🍄', pl:'Muchomor', en:'Toadstool', others:['mushroom', 'poison mushroom', 'muchomor']},
-  {emoji:'🌾', pl:'Zboże', en:'Wheat', others:['grain', 'crop wheat', 'zboze']},
-  {emoji:'🌱', pl:'Kiełek', en:'Seedling', others:['seedlng', 'young plant', 'kielek']},
-  {emoji:'🌡️', pl:'Termometr', en:'Thermometer', others:['thermom', 'temperature gauge', 'termometr']},
-  {emoji:'🐹', pl:'Chomik', en:'Hamster', others:['hamstor', 'cute hamster', 'chomik']},
-  {emoji:'🦝', pl:'Szop', en:'Raccoon', others:['racoon', 'trash panda', 'szop']},
-  {emoji:'🐗', pl:'Dzik', en:'Boar', others:['boarr', 'wild pig', 'dzik']},
-  {emoji:'🦄', pl:'Jednorożec', en:'Unicorn', others:['unicrn', 'magic horse', 'jednorozec']},
-  {emoji:'🦎', pl:'Jaszczurka', en:'Lizard', others:['lizrd', 'gecko', 'jaszczurka']},
-  {emoji:'🐉', pl:'Smok', en:'Dragon', others:['dragn', 'mythical dragon', 'smok']},
-  {emoji:'🦕', pl:'Dinozaur', en:'Dinosaur', others:['dinasaur', 'prehistoric reptile', 'dinozaur']},
-  {emoji:'🐢', pl:'Żółw', en:'Turtle', others:['turtel', 'tortoise', 'zolw']},
-  {emoji:'🐊', pl:'Krokodyl', en:'Crocodile', others:['crocodl', 'croc', 'krokodyl']},
-  {emoji:'🐸', pl:'Żaba', en:'Frog', others:['frogge', 'toad', 'zaba']},
-  {emoji:'🐁', pl:'Mysz', en:'Mouse', others:['mous', 'tiny mouse', 'mysz']},
-  {emoji:'🐀', pl:'Szczur', en:'Rat', others:['ratt', 'big rat', 'szczur']},
-  {emoji:'🐂', pl:'Byk', en:'Bull', others:['bul', 'strong bull', 'byk']},
-  {emoji:'🐃', pl:'Wół Wodny', en:'Water Buffalo', others:['buffalo', 'buffallo', 'wol wodny']}
-     ],
-     hard:[
   {emoji:'🤡', pl:'Klaun', en:'Clown', others:['clow', 'clownface', 'klaun']},
   {emoji:'👻', pl:'Duch', en:'Ghost', others:['ghoust', 'spirit', 'duch']},
   {emoji:'🤖', pl:'Robot', en:'Robot', others:['robotface', 'robbot', 'robot']},
@@ -359,7 +377,22 @@
   {emoji:'🦓', pl:'Zebra', en:'Zebra', others:['zebbra', 'striped horse', 'zebra']},
   {emoji:'🐴', pl:'Koń', en:'Horse', others:['hors', 'stallion', 'kon']},
   {emoji:'🦖', pl:'Tirex', en:'T-Rex', others:['trex', 'tyrannosaurus', 'tirex']},
-  {emoji:'🐍', pl:'Wąż', en:'Snake', others:['snak', 'serpent', 'waz']}
+  {emoji:'🐍', pl:'Wąż', en:'Snake', others:['snak', 'serpent', 'waz']},
+  {emoji:'🦄', pl:'Jednorożec', en:'Unicorn', others:['unicrn', 'magic horse', 'jednorozec']},
+  {emoji:'🦎', pl:'Jaszczurka', en:'Lizard', others:['lizrd', 'gecko', 'jaszczurka']},
+  {emoji:'🐉', pl:'Smok', en:'Dragon', others:['dragn', 'mythical dragon', 'smok']},
+  {emoji:'🦕', pl:'Dinozaur', en:'Dinosaur', others:['dinasaur', 'prehistoric reptile', 'dinozaur']},
+  {emoji:'🐢', pl:'Żółw', en:'Turtle', others:['turtel', 'tortoise', 'zolw']},
+  {emoji:'🐊', pl:'Krokodyl', en:'Crocodile', others:['crocodl', 'croc', 'krokodyl']},
+  {emoji:'🐸', pl:'Żaba', en:'Frog', others:['frogge', 'toad', 'zaba']},
+  {emoji:'🐁', pl:'Mysz', en:'Mouse', others:['mous', 'tiny mouse', 'mysz']},
+  {emoji:'🐀', pl:'Szczur', en:'Rat', others:['ratt', 'big rat', 'szczur']},
+  {emoji:'🐂', pl:'Byk', en:'Bull', others:['bul', 'strong bull', 'byk']},
+  {emoji:'🐹', pl:'Chomik', en:'Hamster', others:['hamstor', 'cute hamster', 'chomik']},
+  {emoji:'🧑‍🦯', pl:'Osoba Niewidoma', en:'Blind Person', others:['visually impaired', 'blind man', 'niewidoma']},
+  {emoji:'🤵', pl:'Pan Młody', en:'Groom', others:['groomm', 'bridegroom', 'pan mlody']},
+  {emoji:'👰', pl:'Panna Młoda', en:'Bride', others:['bridde', 'wedding bride', 'panna mloda']},
+  {emoji:'🧑‍🦲', pl:'Osoba Łysa', en:'Bald Person', others:['baldy', 'hairless', 'osoba lysa']}
      ]
     };
 
@@ -501,7 +534,7 @@
         .filter(Boolean).map(normalizeAnswer);
       if(accepted.includes(answer)){
         score += 1;
-        const bonus = (roundCount === 1) ? 5 : 1;
+        const bonus = (roundCount === 1) ? 3 : 1;
         timeLeft += bonus;
         updateHUD();
         guessInput.value = '';
